# reefast

./: .clippy.toml  Cargo.toml  EVEDEC.md  README.md  WORKAROUNDS.md  rustfmt.toml
adh/: Cargo.toml
adh/src/: lib.rs
adh/src/handler_json/: handler.rs
adh/src/handler_ram/: handler.rs  mod.rs
adh/src/util/: err_res.rs
core/: Cargo.toml
core/examples/: playground.rs
core/src/: ac.rs  config.rs  dbg.rs  def.rs  defines.rs  defs.rs  ec.rs  lib.rs  src.rs  ss.rs  stats.rs  val.rs
core/src/ad/: cacher.rs  err.rs  handler.rs  mod.rs  result.rs
core/src/adg/: clean.rs  custom.rs  data.rs  eff_abil.rs  external_exts.rs  extras.rs  fetch.rs  mod.rs  norm.rs  pk.rs  support.rs  valid.rs
core/src/adh/: data.rs  handler.rs  mod.rs
core/src/adt/: attr.rs  buff.rs  effect.rs  item.rs  mod.rs  muta.rs
core/src/api/: mod.rs  sol_set_src.rs  sol_validate.rs
core/src/cg/: clean.rs  container.rs  conv.rs  data.rs  fetch.rs  mod.rs  pk.rs  valid.rs
core/src/ch/: container.rs  data.rs  handler.rs  mod.rs
core/src/ch_impls/: mod.rs
core/src/consts/: eve.rs  mod.rs  ree.rs
core/src/ct/: abil.rs  attr.rs  buff.rs  effect.rs  item.rs  mod.rs  modifier.rs  muta.rs
core/src/data_handler/: common.rs  mod.rs  phobos.rs
core/src/defines/: eve.rs  mod.rs  types.rs
core/src/dh/: aux.rs  data.rs  handler.rs  mod.rs
core/src/dh_impls/: mod.rs
core/src/ec/: abils.rs  attrs.rs  buffs.rs  effcats.rs  effects.rs  extras.rs  itemcats.rs  itemgrps.rs  items.rs  mod.rs  units.rs
core/src/ed/: cont.rs  handler.rs  mod.rs  result.rs
core/src/edh/: cont.rs  handler.rs  mod.rs  result.rs
core/src/edh_impls/: mod.rs
core/src/edt/: abil.rs  attr.rs  aux.rs  buff.rs  effect.rs  item.rs  item_abil.rs  item_attr.rs  item_effect.rs  item_group.rs  item_srq.rs  mod.rs  muta_attr_mod.rs  muta_item_conv.rs
core/src/erg/: clean.rs  fetch.rs  mod.rs  valid.rs
core/src/erh/: data.rs  handler.rs  mod.rs
core/src/erh_impls/: mod.rs
core/src/err/: fit_alloc.rs  fit_has_item_kind.rs  item_alloc.rs  item_found.rs  item_kind_match.rs  item_remove.rs  mod.rs  ordered_slot.rs  proj_found.rs  proj_not_found.rs  skill_level.rs
core/src/ert/: effect.rs
core/src/eve_type/: attribute.rs  effect.rs  item.rs  mod.rs  modifier.rs
core/src/fit/: fit.rs  mod.rs
core/src/item/: implant.rs  mod.rs  ship.rs  skill.rs
core/src/misc/: adj_count.rs  attr_id.rs  attr_spec.rs  breacher_info.rs  coordinates.rs  cycle_count.rs  cycle_info.rs  dmg_kinds.rs  dmg_types.rs  dps_profile.rs  ecm.rs  effect_id.rs  effect_spec.rs  fighter_count_override.rs  fit_sec_status.rs  inf_count.rs  item_kind.rs  mining.rs  mining_amount.rs  mining_kinds.rs  mod.rs  mod_rack.rs  movement.rs  mutation_request.rs  npc_behavior.rs  op.rs  proj_range.rs  proj_range_info.rs  range.rs  rearm_minions.rs  reload_optionals.rs  sensor.rs  skill_level.rs  spool.rs  spool_options.rs  structured_option.rs  unit_interval.rs  xyz.rs
core/src/nd/: mod.rs
core/src/ntt/: mod.rs
core/src/num/: count.rs  fighter_count.rs  fit_sec_status.rs  mod.rs  pvalue.rs  skill_level.rs  slot_index.rs  unit_interval.rs  value.rs
core/src/rd/: container.rs  mod.rs
core/src/shr/: fit_type.rs  mod.rs  mod_aggr_mode.rs  mod_domain.rs  mod_op.rs  state.rs
core/src/sol/: debug.rs  err.rs  mod.rs  primitives.rs  sol.rs  sole_debug.rs  sole_fit.rs  sole_fleet.rs  sole_src.rs  view.rs
core/src/src/: error.rs  inner.rs  key.rs  mgr.rs  mod.rs  outer.rs  prepare.rs  src.rs
core/src/ss/: effect_info.rs  fit.rs  fits.rs  helpers.rs  items.rs  mod.rs  mod_rack.rs  notify.rs  ss.rs  ss_view.rs  sse_debug.rs  sse_fit.rs  sse_fleet.rs  system.rs  view.rs
core/src/ssi/: booster.rs  character.rs  charge.rs  drone.rs  fighter.rs  implant.rs  mod.rs  module.rs  rig.rs  ship.rs  skill.rs  stance.rs  subsystem.rs  sw_effect.rs
core/src/ssn/: booster.rs  character.rs  charge.rs  drone.rs  fighter.rs  implant.rs  mod.rs  module.rs  rig.rs  ship.rs  skill.rs  stance.rs  subsystem.rs  sw_effect.rs
core/src/svc/: ctx.rs  mod.rs  output.rs  spool.rs  svc.rs  svce_debug.rs  svce_notify.rs  svce_request.rs
core/src/uad/: mod.rs  primitives.rs  uad.rs  uade_access.rs  uade_debug.rs
core/src/ud/: data.rs  datae_access.rs  datae_debug.rs  err.rs  mod.rs  primitives.rs
core/src/util/: adj_count.rs  error.rs  float.rs  func.rs  funcs.rs  inf_count.rs  keyed_storage.rs  mod.rs  opt_map.rs  result.rs  str_err.rs  traits.rs  tri_option.rs  unit_interval.rs  xyz.rs
data-cacher/: Cargo.toml
data-cacher/src/: lib.rs
data-cacher/src/cacher_json/: cacher.rs  mod.rs
data-cacher/src/handler_json/: mod.rs
data-cacher/src/util/: error.rs
data-handler/: Cargo.toml
data-handler/src/: lib.rs
data-handler/src/phb/: fsd.rs
data-handler/src/util/: func.rs  mod.rs
dh-adapted/: Cargo.toml
dh-adapted/src/: lib.rs
dh-adapted/src/handler_json/: handler.rs
dh-adapted/src/handler_ram/: handler.rs  mod.rs
dh-adapted/src/util/: error.rs  key.rs  mod.rs
dh-eve/: Cargo.toml
dh-eve/src/: lib.rs
dh-eve/src/data/: attr.rs  buff.rs  effect.rs  item_abils.rs  item_effects.rs  item_srq_map.rs  muta_item_convs.rs
dh-eve/src/handler_file/: error.rs
dh-eve/src/phb/: fsd.rs  mod.rs
dh-eve/src/util/: err.rs  err_res.rs  mod.rs
edh-phobos/: Cargo.toml
edh-phobos/src/: fsd.rs  lib.rs
edh-phobos/src/data/: attr.rs  buff.rs  item_effects.rs  mod.rs  muta_attr_mods.rs  muta_item_convs.rs
edh-phobos/src/handler_file/: address.rs  error.rs  handler.rs
edh-phobos/src/handler_http/: error.rs  handler.rs  mod.rs
edh-phobos/src/util/: err_res.rs
examples/playground/: Cargo.toml
examples/playground/src/: main.rs
http/: Cargo.toml
http/src/: config.rs  glue.rs  handlers.rs  logging.rs  main.rs  session.rs  settings.rs  sol_sys_mgr.rs  src_mgr.rs  ss_mgr.rs  state.rs
http/src/bridge/: err_res.rs  mod.rs  sol_mgr.rs  src_mgr.rs  ss.rs  ss_mgr.rs  thread_pool.rs
http/src/cmd/: add_fit.rs  add_item.rs  add_sol.rs  change_fleet.rs  fit.rs  mod.rs  remove_item.rs  (+3 more)
http/tests/: .flake8  .pylintrc  .ruff.toml  __init__.py  conftest.py  pyproject.toml
(+7558 files in other folders)
