[package]
name = "reefast-adh"
version = "0.0.1"
authors = ["DarkPhoenix <phoenix@mail.ru>"]
edition = "2018"
description = "Adapted data handlers for reefast-core crate"
license = "LGPL-3.0-or-later"

[features]
full = ["ram", "json"]
ram = []
json = []

[dependencies]
rc = { package = "reefast-core", path = "../core" }
itertools = ">=0.10.5"
log = ">=0.4.17"
serde = { version = ">=1.0", features = ["derive"] }
serde_repr = ">=0.1.12"
serde_tuple = ">=0.5.0"
serde_json = ">=1.0"
zstd = ">=0.12.2"
