[package]
name = "reefast-core"
version = "0.0.1"
authors = ["DarkPhoenix <phoenix@mail.ru>"]
edition = "2024"
description = "Rust Engine for Eve Fit Analysis, Statistics and Theorycrafting."
license = "LGPL-3.0-or-later"

[dependencies]
itertools = ">=0.14.0"
ordered-float = ">=5.0.0"
rustc-hash = ">=2.1.1"
slab = ">=0.4.9"
smallvec = ">=2.0.0-alpha.11"
thiserror = ">=2.0.12"
tracing = ">=0.1.41"
