[package]
name = "reefast-core"
version = "0.1.0"
authors = ["DarkPhoenix <phoenix@mail.ru>"]
edition = "2024"
description = "Rust Engine for Eve Fit Analysis, Statistics and Theorycrafting."
license = "LGPL-3.0-or-later"

[dependencies]
angle-sc = ">=1.1.4"
either = ">=0.15.0"
itertools = ">=0.14.0"
lender = ">=0.4.2"
num-integer = ">=0.1.46"
ordered-float = ">=5.1.0"
rustc-hash = ">=2.1.1"
slab = ">=0.4.11"
smallvec = ">=2.0.0-alpha.12"
thiserror = ">=2.0.17"
tracing = ">=0.1.43"
