[package]
name = "reefast-dh-adapted"
version = "0.1.0"
authors = ["DarkPhoenix <phoenix@mail.ru>"]
edition = "2021"
description = "Adapted data handlers for reefast-core crate"
license = "LGPL-3.0-or-later"

[features]
full = ["json", "ram"]
json = ["dep:num-rational", "dep:serde", "dep:serde_repr", "dep:serde_tuple", "dep:serde_json", "dep:tracing", "dep:zstd"]
ram = []

[dependencies]
rc = { package = "reefast-core", path = "../core" }
num-rational = { version = ">=0.4.2", features = ["serde"], optional = true }
serde = { version = ">=1.0.213", features = ["derive"], optional = true }
serde_repr = { version = ">=0.1.19", optional = true }
serde_tuple = { version = ">=1.0.0", optional = true }
serde_json = { version = ">=1.0.132", optional = true }
tracing = { version = ">=0.1.40", optional = true }
zstd = { version = ">=0.13.2", optional = true }
