[package]
name = "reefast-dh-eve"
version = "1.0.0"
authors = ["DarkPhoenix <phoenix@mail.ru>"]
edition = "2018"
description = "EVE data handlers for reefast-core crate, which use Phobos dump as data source"
license = "LGPL-3.0-or-later"

[features]
full = ["phb-http", "phb-file"]
phb-http = ["dep:reqwest", "dep:url"]
phb-file = []

[dependencies]
rc = { package = "reefast-core", path = "../core" }
itertools = ">=0.10.5"
reqwest = { version = ">=0.11.14", features = ["blocking", "json"], optional = true }
serde = { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0"
url = { version = ">=2.3.1", optional = true }
