[package]
name = "reefast-dh-eve"
version = "0.1.0"
authors = ["DarkPhoenix <phoenix@mail.ru>"]
edition = "2021"
description = "EVE data handlers for reefast-core crate, which use Phobos dump as data source"
license = "LGPL-3.0-or-later"

[features]
full = ["phb-http", "phb-file"]
phb-http = ["dep:reqwest", "dep:url"]
phb-file = []

[dependencies]
rc = { package = "reefast-core", path = "../core" }
itertools = ">=0.13.0"
reqwest = { version = ">=0.12.9", features = ["blocking", "json"], optional = true }
serde = { version = ">=1.0.216", features = ["derive"] }
serde_json = ">=1.0.134"
url = { version = ">=2.5.4", optional = true }
