[package]
name = "reefast-http"
version = "0.1.0"
authors = ["DarkPhoenix <phoenix@mail.ru>"]
edition = "2024"

[dependencies]
rc = { package = "reefast-core", path = "../core" }
rdhe = { package = "reefast-dh-eve", path = "../dh-eve", features = ["phb-http"] }
rdha = { package = "reefast-dh-adapted", path = "../dh-adapted", features = ["json", "ram"] }
axum = { version = ">=0.8.4", features = ["query"] }
chrono = ">=0.4.41"
config = { version = ">=0.15.11", features = ["toml"] }
educe = { version = ">=0.6.0", features = ["Default"], default-features = false }
parking_lot = { version = ">=0.12.4", features = ["nightly"] }
serde = { version = ">=1.0.219", features = ["derive"] }
serde_tuple = ">=1.1.0"
serde_with = ">=3.14.0"
thiserror = ">=2.0.12"
tokio = { version = ">=1.46.1", features = ["full"] }
tokio-rayon = ">=2.1.0"
tower = ">=0.5.2"
tower-http = { version = ">=0.6.6", features = ["normalize-path", "trace"] }
tower-request-id = ">=0.3.0"
time = { version = ">=0.3.41", features = ["macros"] }
tracing = ">=0.1.41"
tracing-subscriber = { version = ">=0.3.19", features = ["time"] }
tracing-appender = ">=0.2.3"
uuid = { version = ">=1.17.0", features = ["v4", "fast-rng"] }
