[package]
name = "refine-http"
version = "0.1.0"
authors = ["DarkPhoenix <phoenix@mail.ru>"]
edition = "2024"

[dependencies]
rc = { package = "refine-core", path = "../core" }
redh = { package = "refine-edh", path = "../data-handler", features = ["phb-http"] }
radc = { package = "refine-adc", path = "../data-cacher", features = ["json-zfile"] }
axum = { version = ">=0.8.8", features = ["query"] }
chrono = ">=0.4.42"
config = { version = ">=0.15.19", features = ["toml"] }
educe = { version = ">=0.6.0", features = ["Default"], default-features = false }
itertools = ">=0.14.0"
parking_lot = { version = ">=0.12.5", features = ["nightly"] }
serde = { version = ">=1.0.228", features = ["derive"] }
serde_tuple = ">=1.1.3"
serde_with = ">=3.16.1"
thiserror = ">=2.0.17"
tokio = { version = ">=1.49.0", features = ["full"] }
tokio-rayon = ">=2.1.0"
tower = ">=0.5.2"
tower-http = { version = ">=0.6.8", features = ["normalize-path", "trace"] }
tower-request-id = ">=0.3.0"
time = { version = ">=0.3.44", features = ["macros"] }
tracing = ">=0.1.44"
tracing-appender = ">=0.2.4"
tracing-subscriber = { version = ">=0.3.22", features = ["time"] }
uuid = { version = ">=1.19.0", features = ["v4", "fast-rng"] }
