[package]
name = "reefast-example-playground"
version = "0.1.0"
authors = ["DarkPhoenix <phoenix@mail.ru>"]
edition = "2021"

[dependencies]
rc = { package = "reefast-core", path = "../../core" }
rdhe = { package = "reefast-dh-eve", path = "../../dh-eve", features = ["phb-file"] }
rdha = { package = "reefast-dh-adapted", path = "../../dh-adapted", features = ["json"] }
chrono = ">=0.4.40"
itertools = ">=0.14.0"
time = { version = ">=0.3.37", features = ["macros"] }
tracing = ">=0.1.41"
tracing-subscriber = { version = ">=0.3.19", features = ["time"] }
