[package]
name = "reefast-example-playground"
version = "0.1.0"
authors = ["DarkPhoenix <phoenix@mail.ru>"]
edition = "2024"

[dependencies]
rc = { package = "reefast-core", path = "../../core" }
redh = { package = "reefast-edh", path = "../../data-handler", features = ["phb-file"] }
radc = { package = "reefast-adc", path = "../../data-cacher", features = ["json-zfile"] }
chrono = ">=0.4.41"
itertools = ">=0.14.0"
time = { version = ">=0.3.44", features = ["macros"] }
rand = ">=0.9.2"
tracing = ">=0.1.41"
tracing-subscriber = { version = ">=0.3.20", features = ["time"] }
