[package]
name = "refine-example-playground"
version = "0.1.0"
authors = ["DarkPhoenix <phoenix@mail.ru>"]
edition = "2024"

[dependencies]
rc = { package = "refine-core", path = "../../core" }
redh = { package = "refine-edh", path = "../../data-handler", features = ["phb-file"] }
radc = { package = "refine-adc", path = "../../data-cacher", features = ["json-zfile"] }
chrono = ">=0.4.42"
itertools = ">=0.14.0"
time = { version = ">=0.3.44", features = ["macros"] }
tracing = ">=0.1.44"
tracing-subscriber = { version = ">=0.3.22", features = ["time"] }
