[project]
name = "refine-tests"
version = "1.0.0"
description = "Tests for refine HTTP interface"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2",
    "pytest-httpserver>=1.1.3",
    "requests>=2.32.5",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
preview = true
select = [
    "F",  # Pyflakes
    "E", "W",  # pycodestyle
    "C90",  # mccabe
    "I",  # isort
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "ANN",  # flake8-annotations
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "COM",  # flake8-commas
    "C4",  # flake8-comprehensions
    "EM",  # flake8-errmsg
    "EXE",  # flake8-executable
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PYI",  # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",  # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SLOT",  # flake8-slots
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TC",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PL",  # Pylint
    "FLY",  # flynt
    "PERF",  # Perflint
    "FURB",  # refurb
    "RUF",  # Ruff-specific rules
]
ignore = ["ANN003", "ANN401", "PLR2004", "PLW1641"]

[tool.ruff.lint.per-file-ignores]
"tests/**/test_*.py" = ["ANN"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
no-lines-before = ["local-folder"]

[tool.ruff.lint.pylint]
max-args = 15
max-locals = 100
max-public-methods = 50
max-statements = 150

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]
